<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buchen_screen_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/farbverlauf_appdesign_v0"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shadow_menuebereiche"
        android:elevation="5dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/color_topsection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/farbverlauf_appdesign_v3"
            android:layout_weight="1">

        <Button
            android:id="@+id/zurueck"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:text="@string/zurueckzeichen"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middleSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/eingabeauffoderung_uebersicht"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/eingabeaufforderung_1"
                style="@style/menuetext_gross_oranger_hintergrund"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="45dp"
                android:text="@string/eingabeauffoderung_teil_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eingabeaufforderung_2"
                    style="@style/menuetext_gross_oranger_hintergrund"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="@string/eingabeauffoderung_teil_2" />

                <TextView
                    android:id="@+id/eingabeaufforderung_3"
                    style="@style/menuetext_gross_oranger_hintergrund_rechts_angefügt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/eingabeauffoderung_teil_3" />
            </LinearLayout>

            <TextView
                android:id="@+id/eingabeaufforderung_4"
                style="@style/menuetext_gross_oranger_hintergrund"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eingabeauffoderung_teil_4" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/untermenue_2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/aktueller_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_container_40_weiss" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/untermenue_2.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="2dp">

                <TextView
                    android:id="@+id/container_nummer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/container_nummer_40"
                    android:textColor="@color/weiß"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/container_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="2dp"
                    android:textColor="@color/weiß"
                    android:text="@string/container_name"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/eingabebereich_eingabe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/eingabefeld_container"
                style="@style/eingabefeld_v1_oranger_hintergrund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/textvorgabe_container_anzahleingabe"

                android:maxLength="35"
                android:maxLines="1"
                android:paddingLeft="14dp"

                android:paddingRight="14dp"
                android:singleLine="true"

                android:inputType="number"
                android:background="@drawable/edittext_background_selector_orange"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/untermenue_2.3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- muss wieder in style ausgelagert werden (ImageButton_Thema) -->

            <View
                android:id="@+id/menuefeld_oben_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>

            <ImageButton
                android:id="@+id/vorwaerts"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="58dp"
                android:layout_marginRight="8dp"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/button_vorwaerts_weiss"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>