<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buchen_screen_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/popup_error_gesamt"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:background="@drawable/shadow_menuebereiche"
        android:elevation="5dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/standard_rot">


        <ImageView
            android:id="@+id/icon_fehlermeldung"
            android:layout_width="100dp"

            android:layout_height="100dp"
            android:layout_marginTop="15dp"

            android:layout_weight="1"
            android:paddingTop="17dp"
            android:paddingBottom="24dp"
            android:paddingLeft="40dp"

            android:src="@drawable/icon_dialog_error_weiss"

            android:background="@android:color/transparent"
            />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingTop="30dp"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/fehlertext_ueberschift_v1"
                    style="@style/menuetext_gross_roter_hintergrund"
                    android:textColor="@color/weiß"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/fehlertext_ueberschift_v1"
                    android:paddingLeft="2dp"
                    />


                <TextView
                    android:id="@+id/fehlertext_erklaerung_v1_teil_1"
                    style="@style/menuetext_gross_roter_hintergrund"
                    android:textSize="15sp"
                    android:textColor="@color/weiß"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fehlertext_erklaerung_v1_teil_1"
                    android:paddingLeft="2dp"
                    />

                <TextView
                    android:id="@+id/fehlertext_erklaerung_v1_teil_2"
                    style="@style/menuetext_gross_roter_hintergrund"
                    android:textSize="15sp"
                    android:textColor="@color/weiß"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fehlertext_erklaerung_v1_teil_2"
                    android:paddingLeft="2dp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>

</LinearLayout>